--- a/Lab-Report-2/style.css
+++ b/Lab-Report-2/style.css
@@ -90,7 +90,7 @@ body, html {
 
 /* Hero Section */
 .hero {
-  background: url('har.png') no-repeat center center/cover;
+  background: url('image/har.png') no-repeat center center/cover;
   height: 100vh;
   position: relative;
   margin-top: -92px; /* Height of alert banner + padding of top-bar */
